新增健康檢查功能及配置檔更新
在 `Program.cs` 中引入健康檢查中介軟體，並自定義回應格式以 JSON 形式返回健康狀態和持續時間。
在 `appsettings.Development.json` 中移除 `OtlpEndpointUrl` 和 `ServiceName` 設定，保留 MySQL 連接字串。
在 `appsettings.json` 中新增 `OtlpEndpointUrl` 和 `ServiceName` 設定，並將 MySQL 連接字串設為空值，保留 JWT 設定但將其值設為空。

--- a/src/GHLearning.CleanArchitecture.WebApi/appsettings.Development.json
+++ b/src/GHLearning.CleanArchitecture.WebApi/appsettings.Development.json
@@ -5,11 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "OtlpEndpointUrl": "http://127.0.0.1:4317/",
-  "ServiceName": "CleanArchitecture-WebApi",
   "ConnectionStrings": {
-    "MySql": "Server=localhost;Database=sample;Uid=root;Pwd=1qaz2wsx;",
-    "Rabbitmq": "amqp://guest:guest@localhost:5672/"
+    "MySql": "Server=localhost;Database=sample;Uid=root;Pwd=1qaz2wsx;"
   },
   "Jwt": {
     "Secret": "A7D4576B-234A-4E58-A9CF-8C697C20A96B",
