--- a/src/GHLearning.CleanArchitecture.WebApi/appsettings.json
+++ b/src/GHLearning.CleanArchitecture.WebApi/appsettings.json
@@ -7,11 +7,10 @@
     }
   },
   "AllowedHosts": "*",
-  "OtlpEndpointUrl": "",
-  "ServiceName": "",
+  "OtlpEndpointUrl": "http://127.0.0.1:4317/",
+  "ServiceName": "CleanArchitecture-WebApi",
   "ConnectionStrings": {
-    "MySql": "",
-    "Rabbitmq": ""
+    "MySql": ""
   },
   "Jwt": {
     "Secret": "",
