--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -13,18 +13,25 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 9.0.x
+        
     - name: Restore dependencies
       run: dotnet restore
+      
     - name: Build
       run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
-    - name: Upload results to Codecov
-      uses: codecov/codecov-action@v5
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        slug: gordon-hung/GHLearning-CleanArchitecture
+      
+    - name: Run tests
+      run: dotnet test --configuration Release --collect:"Code Coverage"
+
+    - name: Install Codecov
+      run: curl -s https://codecov.io/bash | bash
+
+    - name: Upload coverage to Codecov
+      run: bash <(curl -s https://codecov.io/bash)
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
