--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Set up .NET SDK
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: '7.0'
+          dotnet-version: 9.0.x
 
       # Restore dependencies
       - name: Restore dependencies
