--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,11 +1,8 @@
-name: Code Coverage Report
+﻿name: Code Coverage Report
 on:
   push:
     branches:
-      - master
-  pull_request:
-    branches:
-      - master
+      - "*"
 
 jobs:
   build:
