重構 GUID 生成與追蹤中介軟體
在多個檔案中進行了重構，將異步的 GUID 生成方法改為同步，並新增了追蹤與 correlation ID 的中介軟體。更新了相關的配置與測試，並調整了活動標籤的設置以增強追蹤功能。更新了 `Swashbuckle.AspNetCore` 的版本號以保持相容性。

--- a/src/GHLearning.CleanArchitecture.WebApi/appsettings.Development.json
+++ b/src/GHLearning.CleanArchitecture.WebApi/appsettings.Development.json
@@ -5,6 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "OtlpEndpointUrl": "http://127.0.0.1:4317/",
+  "ServiceName": "CleanArchitecture-WebApi(local)",
   "ConnectionStrings": {
     "MySql": "Server=localhost;Database=sample;Uid=root;Pwd=1qaz2wsx;"
   },
